--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">StoryApp</string>
     <string name="password_too_short">Password is Too Short</string>
+    <string name="story_detail_title">Story Detail</string>
 </resources>
